Fix contrast issues with code blocks
None of the builtin pygments styles pass the test so I googled a bit and
found https://github.com/mpchadwick/pygments-high-contrast-stylesheets.
Using one of these solved the problem. Also had to adjust the bootstrap
color for `code` tags.

--- a/_static/css/style.css
+++ b/_static/css/style.css
@@ -33,10 +33,12 @@ h3 {
 pre {
     margin-bottom: 1rem;
     padding: 1rem 1rem;
-    background-color: #fafafa;
-    border: 1px solid #dddddd;
-    box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.5);
     font-size: 0.9rem;
+}
+
+code {
+    color: #BB0066;
 }
 
 li {
